--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,7 @@ serde_json = "1"
 [features]
 default = []
 serde = ["dep:serde", "mint/serde"]
+
+# Uses a prebuilt version of the FFI bindings.
+# This saves time over building identical bindings each time.
+prebuilt_ffi = []
