--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,12 +24,15 @@ static_assertions = "1"
 
 [build-dependencies]
 cmake = "0.1"
-fnv = "1"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+# WARN: deps below are commented out because I use prebuilt FFI
+# and sadly optional build-dependencies are not supported by cargo (yet)
+#
+# fnv = "1"
+# serde = { version = "1", features = ["derive"] }
+# serde_json = "1"
 
 [features]
-default = []
+default = ["prebuilt_ffi"]
 serde = ["dep:serde", "mint/serde"]
 
 # Uses a prebuilt version of the FFI bindings.
